[package]
name = "monomod-uname-hack"
version = "0.1.0"
authors = ["Elvyria <elvyria@tutanota.com>"]
repository = "https://github.com/Elvyria/monomod-uname-hack"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.149"
lazy_static = "1.4.0"
ctor = "0.2.5"

[dependencies.frida-gum]
version = "0.13.2"
features = ["auto-download"]
