[package]
name = "monomod-uname-hack"
version = "0.2.0"
authors = ["Elvyria <elvyria@tutanota.com>"]
repository = "https://github.com/Elvyria/monomod-uname-hack"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ctor = "0.2.5"
libc = "0.2.149"
libc_alloc = "1.0.5"

[dependencies.lazy_static]
version = "1.4.0"
default-features = false
features = ["spin_no_std"]

[dependencies.frida-gum]
version = "0.13.2"
default-features = false
features = ["auto-download"]
